# financial-context-xtrend

./: .gitignore  .gitmodules  MASTERPLAN.txt  README.md  backtesting_baselines.py  optimized_contexts.py  pyproject.toml  test.ipynb
components_old/: decoder.py
models_old/: xtrend.py
src/: back.py  backtest_model.ipynb  backtester.py  cpd_segmentation.py  cpd_segmentation_valid.py  create_cpd_segmentation.py  create_pinnacle_contexts.py  data.py  data_loader.py  data_loader_optimized.py  data_optimized.py  data_valid.py  dataloader.py  dataset.py  datasetvisualizer.py  pinnacle_data.py  prep_data.py  train.py  train_new.py  train_xtrend_model.py
src/components/: attention.py  encoder.py  minLSTM.py  temporal_block.py  vsn.py
src/models/: attention.py  context_encoder.py  decoder.py  encoder.py  lstm.py  ptp.py  sharpe.py  target_decoder.py  target_encoder.py  temporal_block.py  vsn.py  xtrend.py
src/runs/runs/: metrics_final.npz  model_state_final.pth
