[project]
name = "src"
version = "0.1.0"
description = "Cross attention based, momentum inspired model for few-shot learning patterns in financial time-series."
authors = [{ name = "Samuel Anzalone" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "empyrical-reloaded (>=0.5.11)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "mingru-pytorch (>=0.2.1,<0.3.0)",
    "polars (>=1.30.0,<2.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "h5py (>=3.13.0,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch"}
